--- a/templates/account.html
+++ b/templates/account.html
@@ -136,7 +136,7 @@
         }
     </script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhToNwsd4G1Fx5s3hc2h7-ryhBSQTsgi0&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key={GOOGLE_API_KEY}&callback=initMap">
     </script>
     <script>
         $('#favorite_button').click(function () {
