--- a/static/basic.css
+++ b/static/basic.css
@@ -15,8 +15,7 @@ body{
 }
 
 .nav-item {
-    background-color: #61892f;
-    color: white;
+    background-color: #496b22;
     padding-right: 5px;
     padding-left: 5px;
     margin-right: 5px;
@@ -29,6 +28,10 @@ body{
 }
 
 .nav-link:hover {
+    color: white !important;
+}
+
+.nav-item .nav-link {
     color: white !important;
 }
 
@@ -102,7 +105,7 @@ p {
     position: absolute;
     width: 100%;
     background: #474B4F;
-    color: #6B6E70;
+    color: #FFFFFF;
     margin-top: 50px;
     padding-bottom:3%;
     bottom: 0;
@@ -110,11 +113,11 @@ p {
 }
 
 .footer a {
-    color: #6B6E70;
+    color: #FFFFFF;
 }
 
 .footer a:hover {
-    color: darkgrey;
+    color: #DDDDDD;
 
 }
 
