--- a/templates/account.html
+++ b/templates/account.html
@@ -10,14 +10,14 @@
 <div class="row" style="padding: 3%; background-color: gainsboro; border-radius:3px;">
     <div class="col col-md-3">
         <div class="row">
-            <img src="https://source.unsplash.com/user/jampatcon/500x600" width="100%" height="100%">
+            <img src="https://source.unsplash.com/user/jampatcon/500x600" width="100%" height="100%" alt="User Profile">
         </div>
         <div class="row" style="padding-top:10px">
             {% if current_user.email == account.email %}
-            <a href="{{ url_for('update_account', email = current_user.email) }}" class="btn btn-light btn-md active"
-                role="button" aria-pressed="true">Edit account</a>
+            <button type="button" class="btn btn-light btn-md active"
+                onclick="window.location.href='{{ url_for('update_account', email = current_user.email) }}';">Edit
+                account</button>
             {% else %}
-            <!--<a href="{{ url_for('mark_favorite') }}" class="btn btn-light btn-md active" role="button" aria-pressed="true">Favorite</a>-->
             <button id="favorite_button">Favorite</button>
             {% endif %}
         </div>
