--- a/templates/testing.html
+++ b/templates/testing.html
@@ -27,6 +27,6 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key={GOOGLE_API_KEY}&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhToNwsd4G1Fx5s3hc2h7-ryhBSQTsgi0&callback=initMap">
     </script>
 {% endblock %}
