--- a/static/basic.css
+++ b/static/basic.css
@@ -1,12 +1,12 @@
 html,
-body {
-    font-family: 'Open Sans', sans-serif;
+body{
+    font-family: 'Open Sans';
     background-color: white;
     color: black;
     height: 100%;
 }
 
-.navbar {
+.navbar{
     background-color: #222629;
     position: relative;
     top: 0;
@@ -15,7 +15,8 @@ body {
 }
 
 .nav-item {
-    background-color: #496b22;
+    background-color: #61892f;
+    color: white;
     padding-right: 5px;
     padding-left: 5px;
     margin-right: 5px;
@@ -28,10 +29,6 @@ body {
 }
 
 .nav-link:hover {
-    color: white !important;
-}
-
-.nav-item .nav-link {
     color: white !important;
 }
 
@@ -61,7 +58,7 @@ body {
 }
 
 
-.container {
+.container{
     width: 50%;
     clear: both;
 }
@@ -71,7 +68,7 @@ body {
 }
 
 p {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Open Sans";
     font-size: 20px;
     color: black;
 }
@@ -105,18 +102,19 @@ p {
     position: absolute;
     width: 100%;
     background: #474B4F;
-    color: #FFFFFF;
+    color: #6B6E70;
     margin-top: 50px;
-    padding-bottom: 3%;
+    padding-bottom:3%;
     bottom: 0;
     left: 0;
 }
 
 .footer a {
-    color: #FFFFFF;
+    color: #6B6E70;
 }
 
 .footer a:hover {
-    color: #DDDDDD;
+    color: darkgrey;
 
 }
+
